RESOLVED FIXED71070
[chromium] fix minor style nit in CCLayerImpl
https://bugs.webkit.org/show_bug.cgi?id=71070
Summary [chromium] fix minor style nit in CCLayerImpl
Shawn Singh
Reported 2011-10-27 15:48:27 PDT
after https://bugs.webkit.org/show_bug.cgi?id=70442 lands, we could fix the if-statements in the CCLayerImpl settors to be more consistent with usual webkit style.
Attachments
Patch (9.99 KB, patch)
2011-11-16 18:16 PST, Shawn Singh
no flags
updated closer to tip of tree (10.10 KB, patch)
2011-11-17 11:29 PST, Shawn Singh
no flags
James Robinson
Comment 1 2011-10-27 15:51:01 PDT
https://bugs.webkit.org/show_bug.cgi?id=38829 is going to add another bool that we'll want to plumb through so it might be worth doing that at the same time
Shawn Singh
Comment 2 2011-11-16 18:16:02 PST
Created attachment 115503 [details] Patch discussed with James offline, the extra bool won't be part of this patch
James Robinson
Comment 3 2011-11-16 18:16:37 PST
Comment on attachment 115503 [details] Patch R=me. Thanks
WebKit Review Bot
Comment 4 2011-11-16 19:23:34 PST
Comment on attachment 115503 [details] Patch Rejecting attachment 115503 [details] from commit-queue. Failed to run "['/mnt/git/webkit-commit-queue/Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '-..." exit_code: 2 Last 500 characters of output: r', u'James Robinson', u'--f..." exit_code: 1 Parsed 2 diffs from patch file(s). patching file Source/WebCore/ChangeLog Hunk #1 succeeded at 1 with fuzz 3. patching file Source/WebCore/platform/graphics/chromium/cc/CCLayerImpl.cpp Hunk #1 FAILED at 241. 1 out of 1 hunk FAILED -- saving rejects to file Source/WebCore/platform/graphics/chromium/cc/CCLayerImpl.cpp.rej Failed to run "[u'/mnt/git/webkit-commit-queue/Tools/Scripts/svn-apply', u'--reviewer', u'James Robinson', u'--f..." exit_code: 1 Full output: http://queues.webkit.org/results/10505200
Shawn Singh
Comment 5 2011-11-17 11:29:39 PST
Created attachment 115630 [details] updated closer to tip of tree
WebKit Review Bot
Comment 6 2011-11-17 14:51:27 PST
Comment on attachment 115630 [details] updated closer to tip of tree Clearing flags on attachment: 115630 Committed r100682: <http://trac.webkit.org/changeset/100682>
WebKit Review Bot
Comment 7 2011-11-17 14:51:32 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.