[chromium] Fix minor style nit in CCLayerImpl https://bugs.webkit.org/show_bug.cgi?id=71070

Patch by Shawn Singh <shawnsingh@chromium.org> on 2011-11-17
Reviewed by James Robinson.

Fixes if-statements on several settors to follow WebKit
conventions. Existing CCLayerImplTest unit tests already cover
this change.

* platform/graphics/chromium/cc/CCLayerImpl.cpp:
(WebCore::CCLayerImpl::setBounds):
(WebCore::CCLayerImpl::setMaskLayer):
(WebCore::CCLayerImpl::setReplicaLayer):
(WebCore::CCLayerImpl::setDrawsContent):
(WebCore::CCLayerImpl::setAnchorPoint):
(WebCore::CCLayerImpl::setAnchorPointZ):
(WebCore::CCLayerImpl::setBackgroundColor):
(WebCore::CCLayerImpl::setMasksToBounds):
(WebCore::CCLayerImpl::setOpaque):
(WebCore::CCLayerImpl::setOpacity):
(WebCore::CCLayerImpl::setPosition):
(WebCore::CCLayerImpl::setPreserves3D):
(WebCore::CCLayerImpl::setZoomAnimatorTransform):
(WebCore::CCLayerImpl::setSublayerTransform):
(WebCore::CCLayerImpl::setTransform):
(WebCore::CCLayerImpl::setDebugBorderColor):
(WebCore::CCLayerImpl::setDebugBorderWidth):
(WebCore::CCLayerImpl::setContentBounds):
(WebCore::CCLayerImpl::setScrollPosition):
(WebCore::CCLayerImpl::setScrollDelta):
(WebCore::CCLayerImpl::setScaleDelta):
(WebCore::CCLayerImpl::setDoubleSided):

Canonical link: https://commits.webkit.org/89183@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@100682 268f45cc-cd09-0410-ab3c-d52691b4dbfc